--- a/challenges/BOJ10799.md
+++ b/challenges/BOJ10799.md
@@ -8,8 +8,10 @@ ATM
 
 # 풀이
 
-일반 괄호 검사오 같이 '('의 경우 스택에 추가하고 ')'인 경우 스택에서 pop 한다. 그 후, 바로 직전의 문자가 '('이면 레이저를 의미하므로 레이저로 잘랐을때 생기는 파이프의 수만큼 가산한다.
-레이저 밑에 있는 파이프의 수는 스택에 추가된 파이프 수와 같으므로 스택의 사이즈가 된다. 따라서 직전의 문자가 '('인 경우라면 스택의 사이즈 만큼 가산하고 아니라면 1을 가산한다.
+일반 괄호 검사와 같이 '('의 경우 스택에 추가하고 ')'인 경우 스택에서 pop 한다.   
+그 후, 바로 직전의 문자가 '('이면 레이저를 의미하므로 레이저로 잘랐을때 생기는 파이프의 수만큼 가산한다.   
+레이저 밑에 있는 파이프의 수는 스택에 추가된 파이프 수와 같으므로 스택의 사이즈가 된다.   
+따라서 직전의 문자가 '('인 경우라면 스택의 사이즈 만큼 가산하고 아니라면 1을 가산한다.
 
 ``` c++
 #include <iostream>
