--- a/challenges/BOJ2263.md
+++ b/challenges/BOJ2263.md
@@ -10,7 +10,7 @@
 
 트리를 직접 그려보면, `post-order`의 경우 항상 마지막 값이 `root`값이라는 것을 알수 있다.   
 `post-order`에서 `root`값을 찾은후 출력하고 `position`에 저장된 `in-order`의 `root`위치를 찾는다.    
-그 후, 왼쪽 노드의 사이즈를 구한다. 왼쪽 노드와 오른쪽 노드를 분할정복한다.
+그 후, 왼쪽 노드의 사이즈를 구한다. 좌우 노드의 인덱스를 찾고 재귀를 통해 왼쪽 노드와 오른쪽 노드를 분할정복한다.
 이를 반복하면 `pre-order`를 구할 수 있다.
 
 ``` c++
