--- a/challenges/BOJ1562.md
+++ b/challenges/BOJ1562.md
@@ -11,7 +11,8 @@
 
 
 
-비트마스킹을 이용하여 어떤 수를 사용했는지 사용하지 않았는지 표현한다. 비트마스킹으로 0, 1, 2, 3, 4의 숫자를 사용했다면 아래와 같이 나타낼 수 있다. 
+비트마스킹을 이용하여 어떤 수를 사용했는지 사용하지 않았는지 표현한다.    
+비트마스킹으로 0, 1, 2, 3, 4의 숫자를 사용했다면 아래와 같이 나타낼 수 있다. 
 
 |  9   |  8   |  7   |  6   |  5   |  4   |  3   |  2   |  1   |  0   |
 | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
